# ShaMC

./: CMakeLists.txt  Readme.md  Readme.txt  main.cpp
ShaFEM-MEM/: DataObject.cpp  DataObject.h  FPM.cpp  FPM.h  InputData.cpp  InputData.h  OutputData.cpp  OutputData.h  buffer.cpp
headers/ShaFEM/: DataObject.h  FPM.h  FPM_modified.hpp  InputData.h  buffer.h
headers/cluster/: ShaMC.hpp
headers/utils/: PortMacros.hpp  ProcessDataBuffer.hpp  ProcessTransactions.hpp  Row.hpp  SharedDataset.hpp  SharedSettings.hpp  SharedSubspace.hpp  SharedTransactions.hpp  logger.h
src/ShaFEM/: DataObject.cpp  FPM.cpp  FPM_modified.cpp  InputData.cpp  buffer.cpp
src/cluster/: ShaMC.cpp
src/utils/: ProcessDataBuffer.cpp  ProcessTransactions.cpp  SharedDataset.cpp  SharedSubspace.cpp  SharedTransactions.cpp
